// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`optimizeFull regression snapshot (n=1, must match pristine main byte-for-byte) > allocates complementary options together 1`] = `
{
  "baseYield": [],
  "bestProbability": 0.9990234375,
  "choiceHistory": [
    {
      "actualFuel": 10,
      "actualFuelByEgg": [],
      "actualTime": 10,
      "legendarySupplyVector": [],
      "numShipsLaunched": 10,
      "ship": "chicken-one-short",
      "supplyVector": [
        [
          "B",
          1,
        ],
      ],
      "target": "",
      "targetAfxId": 0,
    },
    {
      "actualFuel": 10,
      "actualFuelByEgg": [],
      "actualTime": 10,
      "legendarySupplyVector": [],
      "numShipsLaunched": 10,
      "ship": "chicken-one-short",
      "supplyVector": [
        [
          "C",
          1,
        ],
      ],
      "target": "",
      "targetAfxId": 12,
    },
  ],
  "craftPrimal": [
    [
      "A",
      10,
    ],
  ],
  "craftProbability": 0.9990234375,
  "dropProbability": 0,
  "expectedCrafts": 10,
  "expectedDrops": [],
  "finalYieldVector": [
    [
      "B",
      10,
    ],
    [
      "C",
      10,
    ],
  ],
  "fuelByEgg": [],
  "fuelUsed": 200,
  "perTarget": [
    {
      "bestProbability": 0.9990234375,
      "craftProbability": 0.9990234375,
      "dropProbability": 0,
      "expectedCrafts": 10,
      "nodeId": "A",
    },
  ],
  "recipeDag": [
    {
      "children": [
        {
          "nodeId": "B",
          "quantity": 1,
        },
        {
          "nodeId": "C",
          "quantity": 1,
        },
      ],
      "id": "A",
      "isLeaf": false,
      "legendaryCraftProbability": 0.5,
    },
    {
      "children": [],
      "id": "B",
      "isLeaf": true,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [],
      "id": "C",
      "isLeaf": true,
      "legendaryCraftProbability": 0,
    },
  ],
  "runningTimeSeconds": 200,
  "slots": [
    {
      "loadSeconds": 200,
      "missionCount": 20,
      "rawLoadSeconds": 200,
    },
    {
      "loadSeconds": 0,
      "missionCount": 0,
      "rawLoadSeconds": 0,
    },
    {
      "loadSeconds": 0,
      "missionCount": 0,
      "rawLoadSeconds": 0,
    },
  ],
  "timeUnitsUsed": 200,
}
`;

exports[`optimizeFull regression snapshot (n=1, must match pristine main byte-for-byte) > falls back to triples when pairs are not enough 1`] = `
{
  "baseYield": [],
  "bestProbability": 0.6513215599,
  "choiceHistory": [
    {
      "actualFuel": 10,
      "actualFuelByEgg": [],
      "actualTime": 10,
      "legendarySupplyVector": [],
      "numShipsLaunched": 10,
      "ship": "chicken-one-short",
      "supplyVector": [
        [
          "B",
          1,
        ],
      ],
      "target": "",
      "targetAfxId": 0,
    },
    {
      "actualFuel": 10,
      "actualFuelByEgg": [],
      "actualTime": 10,
      "legendarySupplyVector": [],
      "numShipsLaunched": 10,
      "ship": "chicken-one-short",
      "supplyVector": [
        [
          "C",
          1,
        ],
      ],
      "target": "",
      "targetAfxId": 12,
    },
    {
      "actualFuel": 10,
      "actualFuelByEgg": [],
      "actualTime": 10,
      "legendarySupplyVector": [],
      "numShipsLaunched": 10,
      "ship": "chicken-one-short",
      "supplyVector": [
        [
          "D",
          1,
        ],
      ],
      "target": "",
      "targetAfxId": 6,
    },
  ],
  "craftPrimal": [
    [
      "A",
      10,
    ],
  ],
  "craftProbability": 0.6513215599,
  "dropProbability": 0,
  "expectedCrafts": 10,
  "expectedDrops": [],
  "finalYieldVector": [
    [
      "B",
      10,
    ],
    [
      "C",
      10,
    ],
    [
      "D",
      10,
    ],
  ],
  "fuelByEgg": [],
  "fuelUsed": 300,
  "perTarget": [
    {
      "bestProbability": 0.6513215599,
      "craftProbability": 0.6513215599,
      "dropProbability": 0,
      "expectedCrafts": 10,
      "nodeId": "A",
    },
  ],
  "recipeDag": [
    {
      "children": [
        {
          "nodeId": "B",
          "quantity": 1,
        },
        {
          "nodeId": "C",
          "quantity": 1,
        },
        {
          "nodeId": "D",
          "quantity": 1,
        },
      ],
      "id": "A",
      "isLeaf": false,
      "legendaryCraftProbability": 0.1,
    },
    {
      "children": [],
      "id": "B",
      "isLeaf": true,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [],
      "id": "C",
      "isLeaf": true,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [],
      "id": "D",
      "isLeaf": true,
      "legendaryCraftProbability": 0,
    },
  ],
  "runningTimeSeconds": 300,
  "slots": [
    {
      "loadSeconds": 300,
      "missionCount": 30,
      "rawLoadSeconds": 300,
    },
    {
      "loadSeconds": 0,
      "missionCount": 0,
      "rawLoadSeconds": 0,
    },
    {
      "loadSeconds": 0,
      "missionCount": 0,
      "rawLoadSeconds": 0,
    },
  ],
  "timeUnitsUsed": 300,
}
`;

exports[`optimizeFull regression snapshot (n=1, must match pristine main byte-for-byte) > handles an empty option list 1`] = `
{
  "baseYield": [],
  "bestProbability": 0,
  "choiceHistory": [],
  "craftPrimal": [],
  "craftProbability": 0,
  "dropProbability": 0,
  "expectedCrafts": 0,
  "expectedDrops": [],
  "finalYieldVector": [],
  "fuelByEgg": [],
  "fuelUsed": 0,
  "perTarget": [
    {
      "bestProbability": 0,
      "craftProbability": 0,
      "dropProbability": 0,
      "expectedCrafts": 0,
      "nodeId": "A",
    },
  ],
  "recipeDag": [
    {
      "children": [
        {
          "nodeId": "B",
          "quantity": 1,
        },
      ],
      "id": "A",
      "isLeaf": false,
      "legendaryCraftProbability": 0.1,
    },
    {
      "children": [],
      "id": "B",
      "isLeaf": true,
      "legendaryCraftProbability": 0,
    },
  ],
  "runningTimeSeconds": 0,
  "slots": undefined,
  "timeUnitsUsed": 0,
}
`;

exports[`optimizeFull regression snapshot (n=1, must match pristine main byte-for-byte) > matches the puzzle-cube-4 production-scale instance 1`] = `
{
  "baseYield": [],
  "bestProbability": 0.051106861201085096,
  "choiceHistory": [
    {
      "actualFuel": 10000000,
      "actualFuelByEgg": [
        [
          51,
          10000000,
        ],
      ],
      "actualTime": 5400,
      "legendarySupplyVector": [
        [
          "gold-meteorite-1",
          0,
        ],
        [
          "ornate-gusset-1",
          0,
        ],
        [
          "puzzle-cube-1",
          0,
        ],
        [
          "puzzle-cube-2",
          0,
        ],
      ],
      "numShipsLaunched": 14,
      "ship": "bcr-short",
      "supplyVector": [
        [
          "aurelian-brooch-1",
          2.824515970057131,
        ],
        [
          "aurelian-brooch-2",
          0.011192330100649829,
        ],
        [
          "beak-of-midas-1",
          0.19787853466928512,
        ],
        [
          "demeters-necklace-1",
          1.9278381393012238,
        ],
        [
          "demeters-necklace-2",
          0.5642353772257949,
        ],
        [
          "gold-meteorite-1",
          9.150451192485226,
        ],
        [
          "lunar-stone-1",
          1.2965069536654,
        ],
        [
          "lunar-stone-2",
          0.022012358160529603,
        ],
        [
          "lunar-totem-1",
          1.2994155633589162,
        ],
        [
          "lunar-totem-2",
          0.3044034560846176,
        ],
        [
          "mercurys-lens-1",
          0.405669611174073,
        ],
        [
          "neodymium-medallion-1",
          0.8751541190238885,
        ],
        [
          "ornate-gusset-1",
          3.1714083965446314,
        ],
        [
          "puzzle-cube-1",
          1.067331778693882,
        ],
        [
          "puzzle-cube-2",
          1.654708054641291,
        ],
        [
          "quantum-stone-1",
          0.020581322191319695,
        ],
        [
          "shell-stone-1",
          0.9312321139148783,
        ],
        [
          "shell-stone-2",
          0.11909011529132187,
        ],
        [
          "solar-titanium-1",
          2.004474187505985,
        ],
        [
          "soul-stone-1",
          0.006771243366505405,
        ],
        [
          "tachyon-stone-1",
          0.5253530828428721,
        ],
        [
          "tachyon-stone-2",
          0.056031457135893525,
        ],
        [
          "tau-ceti-geode-1",
          4.9464398169872945,
        ],
        [
          "tungsten-ankh-1",
          2.9775786465687206,
        ],
        [
          "vial-martian-dust-1",
          2.639726179008668,
        ],
      ],
      "target": "",
      "targetAfxId": 10000,
    },
    {
      "actualFuel": 0,
      "actualFuelByEgg": [],
      "actualTime": 2700,
      "legendarySupplyVector": [
        [
          "gold-meteorite-1",
          0,
        ],
        [
          "ornate-gusset-1",
          0,
        ],
        [
          "puzzle-cube-1",
          0,
        ],
        [
          "puzzle-cube-2",
          0,
        ],
      ],
      "numShipsLaunched": 121,
      "ship": "chicken-heavy-short",
      "supplyVector": [
        [
          "aurelian-brooch-1",
          2.199886699222584,
        ],
        [
          "beak-of-midas-1",
          0.006251903362689987,
        ],
        [
          "demeters-necklace-1",
          1.689882292839284,
        ],
        [
          "demeters-necklace-2",
          0.06326159686154886,
        ],
        [
          "gold-meteorite-1",
          7.521612237616315,
        ],
        [
          "lunar-stone-1",
          1.0112441712324687,
        ],
        [
          "lunar-stone-2",
          0.0007425632346490023,
        ],
        [
          "lunar-totem-1",
          1.1025099835013772,
        ],
        [
          "lunar-totem-2",
          0.021773870332127195,
        ],
        [
          "mercurys-lens-1",
          0.03517593903490516,
        ],
        [
          "neodymium-medallion-1",
          0.13964979541947364,
        ],
        [
          "ornate-gusset-1",
          0.5076713206073383,
        ],
        [
          "puzzle-cube-1",
          0.8781552812959099,
        ],
        [
          "puzzle-cube-2",
          0.4224562010181827,
        ],
        [
          "shell-stone-1",
          0.6867224794033973,
        ],
        [
          "shell-stone-2",
          0.01886829225590384,
        ],
        [
          "solar-titanium-1",
          0.2369088116015815,
        ],
        [
          "tachyon-stone-1",
          0.0831694776459613,
        ],
        [
          "tachyon-stone-2",
          0.005293757253465467,
        ],
        [
          "tau-ceti-geode-1",
          0.9611067807020228,
        ],
        [
          "tungsten-ankh-1",
          2.2047181509783487,
        ],
        [
          "vial-martian-dust-1",
          2.2029383945804644,
        ],
      ],
      "target": "",
      "targetAfxId": 10000,
    },
    {
      "actualFuel": 0,
      "actualFuelByEgg": [],
      "actualTime": 1200,
      "legendarySupplyVector": [
        [
          "puzzle-cube-1",
          0,
        ],
      ],
      "numShipsLaunched": 312,
      "ship": "chicken-one-short",
      "supplyVector": [
        [
          "demeters-necklace-1",
          0.3600372574282413,
        ],
        [
          "lunar-totem-1",
          3.229466906637268,
        ],
        [
          "puzzle-cube-1",
          2.4104958359344906,
        ],
      ],
      "target": "",
      "targetAfxId": 10000,
    },
  ],
  "craftPrimal": [
    [
      "gold-meteorite-2",
      114.83198299200728,
    ],
    [
      "gold-meteorite-3",
      10.43927118109157,
    ],
    [
      "puzzle-cube-2",
      291.0913782500268,
    ],
    [
      "puzzle-cube-3",
      52.196355905457864,
    ],
    [
      "puzzle-cube-4",
      5.219635590545785,
    ],
  ],
  "craftProbability": 0.051106861201085096,
  "dropProbability": 0,
  "expectedCrafts": 5.219635590545785,
  "expectedDrops": [],
  "finalYieldVector": [
    [
      "gold-meteorite-1",
      1038.2213974463673,
    ],
    [
      "ornate-gusset-1",
      105.82794734511278,
    ],
    [
      "puzzle-cube-1",
      873.2741347500805,
    ],
    [
      "puzzle-cube-2",
      74.28311308817818,
    ],
  ],
  "fuelByEgg": [
    [
      51,
      140000000,
    ],
  ],
  "fuelUsed": 140000000,
  "perTarget": [
    {
      "bestProbability": 0.051106861201085096,
      "craftProbability": 0.051106861201085096,
      "dropProbability": 0,
      "expectedCrafts": 5.219635590545785,
      "nodeId": "puzzle-cube-4",
    },
  ],
  "recipeDag": [
    {
      "children": [],
      "id": "gold-meteorite-1",
      "isLeaf": true,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [
        {
          "nodeId": "gold-meteorite-1",
          "quantity": 9,
        },
      ],
      "id": "gold-meteorite-2",
      "isLeaf": false,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [
        {
          "nodeId": "gold-meteorite-2",
          "quantity": 11,
        },
      ],
      "id": "gold-meteorite-3",
      "isLeaf": false,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [],
      "id": "ornate-gusset-1",
      "isLeaf": true,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [],
      "id": "puzzle-cube-1",
      "isLeaf": true,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [
        {
          "nodeId": "puzzle-cube-1",
          "quantity": 3,
        },
      ],
      "id": "puzzle-cube-2",
      "isLeaf": false,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [
        {
          "nodeId": "puzzle-cube-2",
          "quantity": 7,
        },
        {
          "nodeId": "ornate-gusset-1",
          "quantity": 2,
        },
      ],
      "id": "puzzle-cube-3",
      "isLeaf": false,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [
        {
          "nodeId": "puzzle-cube-3",
          "quantity": 10,
        },
        {
          "nodeId": "gold-meteorite-3",
          "quantity": 2,
        },
      ],
      "id": "puzzle-cube-4",
      "isLeaf": false,
      "legendaryCraftProbability": 0.010000000000000002,
    },
  ],
  "runningTimeSeconds": 259200,
  "slots": [
    {
      "loadSeconds": 259200,
      "missionCount": 82,
      "rawLoadSeconds": 259200,
    },
    {
      "loadSeconds": 258300,
      "missionCount": 149,
      "rawLoadSeconds": 258300,
    },
    {
      "loadSeconds": 259200,
      "missionCount": 216,
      "rawLoadSeconds": 259200,
    },
  ],
  "timeUnitsUsed": 259200,
}
`;

exports[`optimizeFull regression snapshot (n=1, must match pristine main byte-for-byte) > matches the tachyon-deflector-4 production-scale instance 1`] = `
{
  "baseYield": [],
  "bestProbability": 0.03745098731689722,
  "choiceHistory": [
    {
      "actualFuel": 165000000000000,
      "actualFuelByEgg": [
        [
          50,
          50000000000000,
        ],
        [
          53,
          40000000000000,
        ],
        [
          54,
          75000000000000,
        ],
      ],
      "actualTime": 138240,
      "legendarySupplyVector": [
        [
          "beak-of-midas-2",
          0,
        ],
        [
          "beak-of-midas-3",
          0,
        ],
        [
          "beak-of-midas-4",
          0.005320334203545522,
        ],
        [
          "book-of-basan-1",
          0,
        ],
        [
          "book-of-basan-2",
          0,
        ],
        [
          "book-of-basan-3",
          0,
        ],
        [
          "demeters-necklace-3",
          0,
        ],
        [
          "demeters-necklace-4",
          0.017673143082724056,
        ],
        [
          "gold-meteorite-2",
          0,
        ],
        [
          "gold-meteorite-3",
          0,
        ],
        [
          "mercurys-lens-2",
          0,
        ],
        [
          "mercurys-lens-3",
          0,
        ],
        [
          "quantum-metronome-1",
          0,
        ],
        [
          "quantum-metronome-2",
          0,
        ],
        [
          "quantum-metronome-3",
          0,
        ],
        [
          "quantum-metronome-4",
          0.00023645929793535651,
        ],
        [
          "ship-in-a-bottle-1",
          0,
        ],
        [
          "ship-in-a-bottle-2",
          0,
        ],
        [
          "ship-in-a-bottle-3",
          0,
        ],
        [
          "ship-in-a-bottle-4",
          0.00003065213121384251,
        ],
        [
          "solar-titanium-2",
          0,
        ],
        [
          "solar-titanium-3",
          0,
        ],
        [
          "tachyon-deflector-1",
          0,
        ],
        [
          "tachyon-deflector-2",
          0,
        ],
        [
          "tachyon-deflector-3",
          0,
        ],
        [
          "tau-ceti-geode-2",
          0,
        ],
        [
          "tau-ceti-geode-3",
          0,
        ],
        [
          "the-chalice-1",
          0,
        ],
        [
          "the-chalice-2",
          0,
        ],
        [
          "the-chalice-3",
          0,
        ],
        [
          "the-chalice-4",
          0.0030301821142827167,
        ],
        [
          "titanium-actuator-1",
          0,
        ],
      ],
      "numShipsLaunched": 15,
      "ship": "atreggies-extended",
      "supplyVector": [
        [
          "aurelian-brooch-3",
          3.636827200887649,
        ],
        [
          "aurelian-brooch-4",
          2.5921325071056933,
        ],
        [
          "beak-of-midas-2",
          1.9136081728043002,
        ],
        [
          "beak-of-midas-3",
          4.427538335431706,
        ],
        [
          "beak-of-midas-4",
          1.6100951484007193,
        ],
        [
          "book-of-basan-1",
          11.520367057424773,
        ],
        [
          "book-of-basan-2",
          5.198522634101711,
        ],
        [
          "book-of-basan-3",
          0.6634697589995089,
        ],
        [
          "carved-rainstick-1",
          1.5176483206597702,
        ],
        [
          "carved-rainstick-2",
          2.525078780637469,
        ],
        [
          "carved-rainstick-3",
          3.3515653311839677,
        ],
        [
          "carved-rainstick-4",
          0.3967042610454375,
        ],
        [
          "clarity-stone-1",
          5.206514082596748,
        ],
        [
          "clarity-stone-2",
          1.3850384432769123,
        ],
        [
          "clarity-stone-3",
          0.2203581712963138,
        ],
        [
          "demeters-necklace-3",
          2.484561042048657,
        ],
        [
          "demeters-necklace-4",
          3.5661433863085286,
        ],
        [
          "dilithium-monocle-1",
          3.5254067039253316,
        ],
        [
          "dilithium-monocle-2",
          3.7675016151281477,
        ],
        [
          "dilithium-monocle-3",
          1.6621337094500486,
        ],
        [
          "dilithium-monocle-4",
          0.018308080086439363,
        ],
        [
          "dilithium-stone-1",
          1.5849998106883576,
        ],
        [
          "dilithium-stone-2",
          1.5575004701136534,
        ],
        [
          "dilithium-stone-3",
          0.959648166291206,
        ],
        [
          "gold-meteorite-2",
          14.0157176496607,
        ],
        [
          "gold-meteorite-3",
          3.304422353377078,
        ],
        [
          "interstellar-compass-1",
          1.6979485353354797,
        ],
        [
          "interstellar-compass-2",
          2.4305476079739785,
        ],
        [
          "interstellar-compass-3",
          4.108931325843251,
        ],
        [
          "interstellar-compass-4",
          0.41948755228909784,
        ],
        [
          "life-stone-1",
          1.9378408719667863,
        ],
        [
          "life-stone-2",
          1.1288172784604027,
        ],
        [
          "life-stone-3",
          1.2586772217857904,
        ],
        [
          "life-stone-4",
          0.007952038612048285,
        ],
        [
          "light-of-eggendil-1",
          7.255153651149801,
        ],
        [
          "light-of-eggendil-2",
          2.3200641904516273,
        ],
        [
          "light-of-eggendil-3",
          0.45129570673729097,
        ],
        [
          "lunar-stone-3",
          1.661914765655664,
        ],
        [
          "lunar-stone-4",
          0.17169572355639498,
        ],
        [
          "lunar-totem-3",
          3.1150710022415096,
        ],
        [
          "lunar-totem-4",
          1.5273475307510076,
        ],
        [
          "mercurys-lens-2",
          2.4724928601021783,
        ],
        [
          "mercurys-lens-3",
          4.468673495520682,
        ],
        [
          "mercurys-lens-4",
          0.18784939670608997,
        ],
        [
          "neodymium-medallion-2",
          1.7122499439846812,
        ],
        [
          "neodymium-medallion-3",
          3.338017089187449,
        ],
        [
          "neodymium-medallion-4",
          2.583125159404711,
        ],
        [
          "ornate-gusset-2",
          1.7894495258846872,
        ],
        [
          "ornate-gusset-3",
          4.4768838878101045,
        ],
        [
          "ornate-gusset-4",
          0.42900284959305207,
        ],
        [
          "phoenix-feather-1",
          2.784575344617972,
        ],
        [
          "phoenix-feather-2",
          3.2671975294558098,
        ],
        [
          "phoenix-feather-3",
          3.257923070325679,
        ],
        [
          "phoenix-feather-4",
          0.07685802958076625,
        ],
        [
          "prophecy-stone-1",
          5.61791385112128,
        ],
        [
          "prophecy-stone-2",
          1.0607082429032446,
        ],
        [
          "prophecy-stone-3",
          0.09676002049032542,
        ],
        [
          "puzzle-cube-3",
          3.654491586218598,
        ],
        [
          "puzzle-cube-4",
          1.2753913910491097,
        ],
        [
          "quantum-metronome-1",
          3.2722244789748802,
        ],
        [
          "quantum-metronome-2",
          3.9259512391242746,
        ],
        [
          "quantum-metronome-3",
          2.4912256911497237,
        ],
        [
          "quantum-metronome-4",
          0.07083269635930234,
        ],
        [
          "quantum-stone-2",
          0.9145632601515312,
        ],
        [
          "quantum-stone-3",
          1.749360917132869,
        ],
        [
          "quantum-stone-4",
          0.1118583845510867,
        ],
        [
          "shell-stone-3",
          1.48881342293932,
        ],
        [
          "shell-stone-4",
          0.23766348880447172,
        ],
        [
          "ship-in-a-bottle-1",
          4.8088245744765805,
        ],
        [
          "ship-in-a-bottle-2",
          3.575168249513061,
        ],
        [
          "ship-in-a-bottle-3",
          1.157853604471687,
        ],
        [
          "ship-in-a-bottle-4",
          0.010741382552507953,
        ],
        [
          "solar-titanium-2",
          8.553437805339764,
        ],
        [
          "solar-titanium-3",
          2.4423574362430838,
        ],
        [
          "soul-stone-2",
          0.7493307574053694,
        ],
        [
          "soul-stone-3",
          0.8789761358122601,
        ],
        [
          "soul-stone-4",
          0.09636154278454546,
        ],
        [
          "tachyon-deflector-1",
          5.129296985193192,
        ],
        [
          "tachyon-deflector-2",
          1.7398456198289147,
        ],
        [
          "tachyon-deflector-3",
          0.3148586918285903,
        ],
        [
          "tachyon-stone-3",
          1.4905211845355197,
        ],
        [
          "tachyon-stone-4",
          0.09473697983021181,
        ],
        [
          "tau-ceti-geode-2",
          11.669332036248159,
        ],
        [
          "tau-ceti-geode-3",
          0.7759236706713216,
        ],
        [
          "terra-stone-1",
          1.7585127677381447,
        ],
        [
          "terra-stone-2",
          0.7484287089725049,
        ],
        [
          "terra-stone-3",
          1.79253663338551,
        ],
        [
          "terra-stone-4",
          0.017883329125333258,
        ],
        [
          "the-chalice-1",
          1.9784593247010158,
        ],
        [
          "the-chalice-2",
          2.4382938394193054,
        ],
        [
          "the-chalice-3",
          4.60847348711113,
        ],
        [
          "the-chalice-4",
          0.6641660002656518,
        ],
        [
          "titanium-actuator-1",
          3.606954509581816,
        ],
        [
          "titanium-actuator-2",
          3.7779277186167417,
        ],
        [
          "titanium-actuator-3",
          1.7214587199764968,
        ],
        [
          "titanium-actuator-4",
          0.1363976050257115,
        ],
        [
          "tungsten-ankh-2",
          1.611124184234327,
        ],
        [
          "tungsten-ankh-3",
          4.5003021160574805,
        ],
        [
          "tungsten-ankh-4",
          1.1050180880107978,
        ],
        [
          "vial-martian-dust-2",
          1.545800113741741,
        ],
        [
          "vial-martian-dust-3",
          3.8954217164352873,
        ],
        [
          "vial-martian-dust-4",
          0.6886614319813996,
        ],
      ],
      "target": "Gilded book of Basan",
      "targetAfxId": 10,
    },
    {
      "actualFuel": 165000000000000,
      "actualFuelByEgg": [
        [
          50,
          50000000000000,
        ],
        [
          53,
          40000000000000,
        ],
        [
          54,
          75000000000000,
        ],
      ],
      "actualTime": 138240,
      "legendarySupplyVector": [
        [
          "beak-of-midas-2",
          0,
        ],
        [
          "beak-of-midas-3",
          0,
        ],
        [
          "beak-of-midas-4",
          0.0046755532546767535,
        ],
        [
          "book-of-basan-1",
          0,
        ],
        [
          "book-of-basan-2",
          0,
        ],
        [
          "book-of-basan-3",
          0,
        ],
        [
          "demeters-necklace-3",
          0,
        ],
        [
          "demeters-necklace-4",
          0.01510030532621529,
        ],
        [
          "gold-meteorite-2",
          0,
        ],
        [
          "gold-meteorite-3",
          0,
        ],
        [
          "mercurys-lens-2",
          0,
        ],
        [
          "mercurys-lens-3",
          0,
        ],
        [
          "quantum-metronome-1",
          0,
        ],
        [
          "quantum-metronome-2",
          0,
        ],
        [
          "quantum-metronome-3",
          0,
        ],
        [
          "quantum-metronome-4",
          0.00022511923078073255,
        ],
        [
          "ship-in-a-bottle-1",
          0,
        ],
        [
          "ship-in-a-bottle-2",
          0,
        ],
        [
          "ship-in-a-bottle-3",
          0,
        ],
        [
          "ship-in-a-bottle-4",
          0.00017316863906210198,
        ],
        [
          "solar-titanium-2",
          0,
        ],
        [
          "solar-titanium-3",
          0,
        ],
        [
          "tachyon-deflector-1",
          0,
        ],
        [
          "tachyon-deflector-2",
          0,
        ],
        [
          "tachyon-deflector-3",
          0,
        ],
        [
          "tau-ceti-geode-2",
          0,
        ],
        [
          "tau-ceti-geode-3",
          0,
        ],
        [
          "the-chalice-1",
          0,
        ],
        [
          "the-chalice-2",
          0,
        ],
        [
          "the-chalice-3",
          0,
        ],
        [
          "the-chalice-4",
          0.0027706982249936316,
        ],
        [
          "titanium-actuator-1",
          0,
        ],
      ],
      "numShipsLaunched": 24,
      "ship": "atreggies-extended",
      "supplyVector": [
        [
          "aurelian-brooch-3",
          3.477866996331537,
        ],
        [
          "aurelian-brooch-4",
          2.4546481418413895,
        ],
        [
          "beak-of-midas-2",
          1.7978541276066489,
        ],
        [
          "beak-of-midas-3",
          4.255221017081313,
        ],
        [
          "beak-of-midas-4",
          1.5116929515565252,
        ],
        [
          "book-of-basan-1",
          7.093835982315101,
        ],
        [
          "book-of-basan-2",
          1.1100802438436983,
        ],
        [
          "book-of-basan-3",
          0.12776382190001884,
        ],
        [
          "carved-rainstick-1",
          1.4280698157534362,
        ],
        [
          "carved-rainstick-2",
          2.4117542699457064,
        ],
        [
          "carved-rainstick-3",
          3.2441239673255122,
        ],
        [
          "carved-rainstick-4",
          0.35490912575777794,
        ],
        [
          "clarity-stone-1",
          5.067537786057727,
        ],
        [
          "clarity-stone-2",
          1.3077002947413692,
        ],
        [
          "clarity-stone-3",
          0.19419131184424113,
        ],
        [
          "demeters-necklace-3",
          2.346798713433512,
        ],
        [
          "demeters-necklace-4",
          3.399906475025779,
        ],
        [
          "dilithium-monocle-1",
          3.400893536268433,
        ],
        [
          "dilithium-monocle-2",
          3.6437452356891247,
        ],
        [
          "dilithium-monocle-3",
          1.5671069160563977,
        ],
        [
          "dilithium-monocle-4",
          0.01587956420199475,
        ],
        [
          "dilithium-stone-1",
          1.4935621950467233,
        ],
        [
          "dilithium-stone-2",
          1.4690068820277171,
        ],
        [
          "dilithium-stone-3",
          0.8934809101048213,
        ],
        [
          "gold-meteorite-2",
          13.81870154538058,
        ],
        [
          "gold-meteorite-3",
          3.184813708446742,
        ],
        [
          "interstellar-compass-1",
          1.6093254302597384,
        ],
        [
          "interstellar-compass-2",
          2.346556277338825,
        ],
        [
          "interstellar-compass-3",
          3.9327636942837723,
        ],
        [
          "interstellar-compass-4",
          0.3688665180661834,
        ],
        [
          "life-stone-1",
          1.8491466784968433,
        ],
        [
          "life-stone-2",
          1.0501119441364926,
        ],
        [
          "life-stone-3",
          1.1736850849712084,
        ],
        [
          "life-stone-4",
          0.006770893787328187,
        ],
        [
          "light-of-eggendil-1",
          7.113369404801306,
        ],
        [
          "light-of-eggendil-2",
          2.191466444194807,
        ],
        [
          "light-of-eggendil-3",
          0.40760434262437556,
        ],
        [
          "lunar-stone-3",
          1.5742068302579442,
        ],
        [
          "lunar-stone-4",
          0.15128012308465227,
        ],
        [
          "lunar-totem-3",
          2.9754181900928485,
        ],
        [
          "lunar-totem-4",
          1.4298015021440573,
        ],
        [
          "mercurys-lens-2",
          2.321758528225132,
        ],
        [
          "mercurys-lens-3",
          4.29430517891763,
        ],
        [
          "mercurys-lens-4",
          0.1647180094758714,
        ],
        [
          "neodymium-medallion-2",
          1.6002513935728842,
        ],
        [
          "neodymium-medallion-3",
          3.210113646613715,
        ],
        [
          "neodymium-medallion-4",
          2.452829871131237,
        ],
        [
          "ornate-gusset-2",
          1.6790431243461406,
        ],
        [
          "ornate-gusset-3",
          4.306600152291038,
        ],
        [
          "ornate-gusset-4",
          0.3865643529783302,
        ],
        [
          "phoenix-feather-1",
          2.680408096586651,
        ],
        [
          "phoenix-feather-2",
          3.1439978602198044,
        ],
        [
          "phoenix-feather-3",
          3.102108366430682,
        ],
        [
          "phoenix-feather-4",
          0.06663529231109683,
        ],
        [
          "prophecy-stone-1",
          5.472527282232265,
        ],
        [
          "prophecy-stone-2",
          0.989018048275383,
        ],
        [
          "prophecy-stone-3",
          0.08674017130620687,
        ],
        [
          "puzzle-cube-3",
          3.4921707259180668,
        ],
        [
          "puzzle-cube-4",
          1.1826032698829068,
        ],
        [
          "quantum-metronome-1",
          3.156327467321026,
        ],
        [
          "quantum-metronome-2",
          3.7668161874705604,
        ],
        [
          "quantum-metronome-3",
          2.3421751107705537,
        ],
        [
          "quantum-metronome-4",
          0.06066097426345432,
        ],
        [
          "quantum-stone-2",
          0.8479548748953947,
        ],
        [
          "quantum-stone-3",
          1.658730442984156,
        ],
        [
          "quantum-stone-4",
          0.09697443787477711,
        ],
        [
          "shell-stone-3",
          1.3995143071720957,
        ],
        [
          "shell-stone-4",
          0.20736944527686707,
        ],
        [
          "ship-in-a-bottle-1",
          6.525427241457657,
        ],
        [
          "ship-in-a-bottle-2",
          16.369198528942842,
        ],
        [
          "ship-in-a-bottle-3",
          4.861276620070858,
        ],
        [
          "ship-in-a-bottle-4",
          0.045768471304113545,
        ],
        [
          "solar-titanium-2",
          8.422905287116732,
        ],
        [
          "solar-titanium-3",
          2.3375861418354082,
        ],
        [
          "soul-stone-2",
          0.6934018645324687,
        ],
        [
          "soul-stone-3",
          0.8095287538875142,
        ],
        [
          "soul-stone-4",
          0.08435044408714987,
        ],
        [
          "tachyon-deflector-1",
          4.996192306764141,
        ],
        [
          "tachyon-deflector-2",
          1.6452059722734058,
        ],
        [
          "tachyon-deflector-3",
          0.2782820029727978,
        ],
        [
          "tachyon-stone-3",
          1.4005533190064683,
        ],
        [
          "tachyon-stone-4",
          0.08299972870246547,
        ],
        [
          "tau-ceti-geode-2",
          11.486726067450784,
        ],
        [
          "tau-ceti-geode-3",
          0.7162428080247599,
        ],
        [
          "terra-stone-1",
          1.6673369243455425,
        ],
        [
          "terra-stone-2",
          0.6843797784373332,
        ],
        [
          "terra-stone-3",
          1.6981782589625027,
        ],
        [
          "terra-stone-4",
          0.015741029290745067,
        ],
        [
          "the-chalice-1",
          1.8724551773146023,
        ],
        [
          "the-chalice-2",
          2.314814465798742,
        ],
        [
          "the-chalice-3",
          4.407453567680807,
        ],
        [
          "the-chalice-4",
          0.6049646405634532,
        ],
        [
          "titanium-actuator-1",
          3.49457777000103,
        ],
        [
          "titanium-actuator-2",
          3.660715762317211,
        ],
        [
          "titanium-actuator-3",
          1.607576427005211,
        ],
        [
          "titanium-actuator-4",
          0.11919197426644479,
        ],
        [
          "tungsten-ankh-2",
          1.5027228160531083,
        ],
        [
          "tungsten-ankh-3",
          4.316834418859609,
        ],
        [
          "tungsten-ankh-4",
          1.0246734710582697,
        ],
        [
          "vial-martian-dust-2",
          1.4427371994819962,
        ],
        [
          "vial-martian-dust-3",
          3.7617769800738534,
        ],
        [
          "vial-martian-dust-4",
          0.6277882671918382,
        ],
      ],
      "target": "Eggquisite ship in a bottle",
      "targetAfxId": 25,
    },
    {
      "actualFuel": 165000000000000,
      "actualFuelByEgg": [
        [
          50,
          50000000000000,
        ],
        [
          53,
          40000000000000,
        ],
        [
          54,
          75000000000000,
        ],
      ],
      "actualTime": 138240,
      "legendarySupplyVector": [
        [
          "beak-of-midas-2",
          0,
        ],
        [
          "beak-of-midas-3",
          0,
        ],
        [
          "beak-of-midas-4",
          0.004265524625267666,
        ],
        [
          "book-of-basan-1",
          0,
        ],
        [
          "book-of-basan-2",
          0,
        ],
        [
          "book-of-basan-3",
          0,
        ],
        [
          "demeters-necklace-3",
          0,
        ],
        [
          "demeters-necklace-4",
          0.01686057765263282,
        ],
        [
          "gold-meteorite-2",
          0,
        ],
        [
          "gold-meteorite-3",
          0,
        ],
        [
          "mercurys-lens-2",
          0,
        ],
        [
          "mercurys-lens-3",
          0,
        ],
        [
          "quantum-metronome-1",
          0,
        ],
        [
          "quantum-metronome-2",
          0,
        ],
        [
          "quantum-metronome-3",
          0,
        ],
        [
          "quantum-metronome-4",
          0.00023510765651081625,
        ],
        [
          "ship-in-a-bottle-1",
          0,
        ],
        [
          "ship-in-a-bottle-2",
          0,
        ],
        [
          "ship-in-a-bottle-3",
          0,
        ],
        [
          "ship-in-a-bottle-4",
          0,
        ],
        [
          "solar-titanium-2",
          0,
        ],
        [
          "solar-titanium-3",
          0,
        ],
        [
          "tachyon-deflector-1",
          0,
        ],
        [
          "tachyon-deflector-2",
          0,
        ],
        [
          "tachyon-deflector-3",
          0,
        ],
        [
          "tau-ceti-geode-2",
          0,
        ],
        [
          "tau-ceti-geode-3",
          0,
        ],
        [
          "the-chalice-1",
          0,
        ],
        [
          "the-chalice-2",
          0,
        ],
        [
          "the-chalice-3",
          0,
        ],
        [
          "the-chalice-4",
          0.002485423797400057,
        ],
        [
          "titanium-actuator-1",
          0,
        ],
      ],
      "numShipsLaunched": 15,
      "ship": "atreggies-extended",
      "supplyVector": [
        [
          "aurelian-brooch-3",
          3.5981883356657502,
        ],
        [
          "aurelian-brooch-4",
          2.562404761503313,
        ],
        [
          "beak-of-midas-2",
          1.8959417289112952,
        ],
        [
          "beak-of-midas-3",
          4.450655111365897,
        ],
        [
          "beak-of-midas-4",
          1.5832485457519094,
        ],
        [
          "book-of-basan-1",
          7.415698528048019,
        ],
        [
          "book-of-basan-2",
          1.150281002883205,
        ],
        [
          "book-of-basan-3",
          0.13572429142288692,
        ],
        [
          "carved-rainstick-1",
          1.4843018091689288,
        ],
        [
          "carved-rainstick-2",
          2.550212750172824,
        ],
        [
          "carved-rainstick-3",
          3.38246026741304,
        ],
        [
          "carved-rainstick-4",
          0.3685816317928139,
        ],
        [
          "clarity-stone-1",
          5.323005277445244,
        ],
        [
          "clarity-stone-2",
          1.356100962754388,
        ],
        [
          "clarity-stone-3",
          0.20205823736701006,
        ],
        [
          "demeters-necklace-3",
          2.4525758991046893,
        ],
        [
          "demeters-necklace-4",
          3.5584551417154224,
        ],
        [
          "dilithium-monocle-1",
          3.540318265356017,
        ],
        [
          "dilithium-monocle-2",
          3.802295368325212,
        ],
        [
          "dilithium-monocle-3",
          1.6470970678986325,
        ],
        [
          "dilithium-monocle-4",
          0.01504689001669224,
        ],
        [
          "dilithium-stone-1",
          1.5585622418182739,
        ],
        [
          "dilithium-stone-2",
          1.5334728961877624,
        ],
        [
          "dilithium-stone-3",
          0.9273653577028782,
        ],
        [
          "gold-meteorite-2",
          14.529350891095786,
        ],
        [
          "gold-meteorite-3",
          3.3183094639936606,
        ],
        [
          "interstellar-compass-1",
          1.6795083376890523,
        ],
        [
          "interstellar-compass-2",
          2.447907332782546,
        ],
        [
          "interstellar-compass-3",
          4.0966501542767535,
        ],
        [
          "interstellar-compass-4",
          0.39051381746446573,
        ],
        [
          "life-stone-1",
          1.914145778886847,
        ],
        [
          "life-stone-2",
          1.0954337453000387,
        ],
        [
          "life-stone-3",
          1.2246421959567686,
        ],
        [
          "life-stone-4",
          0.00698605607917854,
        ],
        [
          "light-of-eggendil-1",
          7.433465949518623,
        ],
        [
          "light-of-eggendil-2",
          2.295456810939318,
        ],
        [
          "light-of-eggendil-3",
          0.4226228059822287,
        ],
        [
          "lunar-stone-3",
          1.6397079701225783,
        ],
        [
          "lunar-stone-4",
          0.1584961472963631,
        ],
        [
          "lunar-totem-3",
          3.1219945708071286,
        ],
        [
          "lunar-totem-4",
          1.4864513648855993,
        ],
        [
          "mercurys-lens-2",
          2.446194405570824,
        ],
        [
          "mercurys-lens-3",
          4.469598071119055,
        ],
        [
          "mercurys-lens-4",
          0.16931109949586068,
        ],
        [
          "neodymium-medallion-2",
          1.6791388828002496,
        ],
        [
          "neodymium-medallion-3",
          3.3552549528739317,
        ],
        [
          "neodymium-medallion-4",
          2.571506786491089,
        ],
        [
          "ornate-gusset-2",
          1.7687820735470166,
        ],
        [
          "ornate-gusset-3",
          4.487331905781585,
        ],
        [
          "ornate-gusset-4",
          0.39914562713922,
        ],
        [
          "phoenix-feather-1",
          2.799762734155019,
        ],
        [
          "phoenix-feather-2",
          3.3010458446441517,
        ],
        [
          "phoenix-feather-3",
          3.2067005007671683,
        ],
        [
          "phoenix-feather-4",
          0.06851708846886644,
        ],
        [
          "prophecy-stone-1",
          5.728935439815205,
        ],
        [
          "prophecy-stone-2",
          1.0209717918022558,
        ],
        [
          "prophecy-stone-3",
          0.08705700652514795,
        ],
        [
          "puzzle-cube-3",
          3.661835336964036,
        ],
        [
          "puzzle-cube-4",
          1.2377074642971555,
        ],
        [
          "quantum-metronome-1",
          3.2924140349693976,
        ],
        [
          "quantum-metronome-2",
          3.9169607310863443,
        ],
        [
          "quantum-metronome-3",
          2.4467653813080648,
        ],
        [
          "quantum-metronome-4",
          0.06378134853057715,
        ],
        [
          "quantum-stone-2",
          0.8912595390244314,
        ],
        [
          "quantum-stone-3",
          1.726194000910486,
        ],
        [
          "quantum-stone-4",
          0.10129781314808882,
        ],
        [
          "shell-stone-3",
          1.4706319782832284,
        ],
        [
          "shell-stone-4",
          0.22022870053448887,
        ],
        [
          "ship-in-a-bottle-1",
          4.877274747508809,
        ],
        [
          "ship-in-a-bottle-2",
          3.6136046805712456,
        ],
        [
          "ship-in-a-bottle-3",
          1.110514222124804,
        ],
        [
          "ship-in-a-bottle-4",
          0.009740174341162387,
        ],
        [
          "solar-titanium-2",
          8.80740150735976,
        ],
        [
          "solar-titanium-3",
          2.4451532145205617,
        ],
        [
          "soul-stone-2",
          0.721545397831695,
        ],
        [
          "soul-stone-3",
          0.8412823686118465,
        ],
        [
          "soul-stone-4",
          0.08863558650457772,
        ],
        [
          "tachyon-deflector-1",
          6.071386534927246,
        ],
        [
          "tachyon-deflector-2",
          7.982173633006796,
        ],
        [
          "tachyon-deflector-3",
          1.3647663592372152,
        ],
        [
          "tachyon-stone-3",
          1.4579025780235715,
        ],
        [
          "tachyon-stone-4",
          0.08581429462644792,
        ],
        [
          "tau-ceti-geode-2",
          12.057328230116847,
        ],
        [
          "tau-ceti-geode-3",
          0.7391448852619333,
        ],
        [
          "terra-stone-1",
          1.741308064543324,
        ],
        [
          "terra-stone-2",
          0.7249376654470654,
        ],
        [
          "terra-stone-3",
          1.7736857475256707,
        ],
        [
          "terra-stone-4",
          0.015920147026589556,
        ],
        [
          "the-chalice-1",
          1.9510912677671182,
        ],
        [
          "the-chalice-2",
          2.433532178927313,
        ],
        [
          "the-chalice-3",
          4.6023331366234475,
        ],
        [
          "the-chalice-4",
          0.6283755922372658,
        ],
        [
          "titanium-actuator-1",
          3.651591360501779,
        ],
        [
          "titanium-actuator-2",
          3.8108600043838203,
        ],
        [
          "titanium-actuator-3",
          1.6752428130637846,
        ],
        [
          "titanium-actuator-4",
          0.1267902004754759,
        ],
        [
          "tungsten-ankh-2",
          1.5670261174526632,
        ],
        [
          "tungsten-ankh-3",
          4.523605658500396,
        ],
        [
          "tungsten-ankh-4",
          1.0738710145171895,
        ],
        [
          "vial-martian-dust-2",
          1.4911871048238883,
        ],
        [
          "vial-martian-dust-3",
          3.9388257431418503,
        ],
        [
          "vial-martian-dust-4",
          0.6521214655448583,
        ],
      ],
      "target": "Eggceptional tachyon deflector",
      "targetAfxId": 26,
    },
    {
      "actualFuel": 90000000000000,
      "actualFuelByEgg": [
        [
          50,
          40000000000000,
        ],
        [
          53,
          20000000000000,
        ],
        [
          54,
          30000000000000,
        ],
      ],
      "actualTime": 103680,
      "legendarySupplyVector": [
        [
          "beak-of-midas-2",
          0,
        ],
        [
          "beak-of-midas-3",
          0,
        ],
        [
          "beak-of-midas-4",
          0,
        ],
        [
          "book-of-basan-1",
          0,
        ],
        [
          "book-of-basan-2",
          0,
        ],
        [
          "demeters-necklace-3",
          0,
        ],
        [
          "demeters-necklace-4",
          0,
        ],
        [
          "gold-meteorite-2",
          0,
        ],
        [
          "gold-meteorite-3",
          0,
        ],
        [
          "mercurys-lens-2",
          0,
        ],
        [
          "mercurys-lens-3",
          0,
        ],
        [
          "quantum-metronome-1",
          0,
        ],
        [
          "quantum-metronome-2",
          0,
        ],
        [
          "quantum-metronome-3",
          0,
        ],
        [
          "ship-in-a-bottle-1",
          0,
        ],
        [
          "ship-in-a-bottle-2",
          0,
        ],
        [
          "ship-in-a-bottle-3",
          0,
        ],
        [
          "solar-titanium-2",
          0,
        ],
        [
          "solar-titanium-3",
          0,
        ],
        [
          "tachyon-deflector-1",
          0,
        ],
        [
          "tachyon-deflector-2",
          0,
        ],
        [
          "tau-ceti-geode-2",
          0,
        ],
        [
          "the-chalice-1",
          0,
        ],
        [
          "the-chalice-2",
          0,
        ],
        [
          "the-chalice-3",
          0,
        ],
        [
          "the-chalice-4",
          0,
        ],
        [
          "titanium-actuator-1",
          0,
        ],
      ],
      "numShipsLaunched": 3,
      "ship": "atreggies-standard",
      "supplyVector": [
        [
          "aurelian-brooch-3",
          4.130457438493319,
        ],
        [
          "aurelian-brooch-4",
          1.4666691480254588,
        ],
        [
          "beak-of-midas-2",
          2.3863103435441246,
        ],
        [
          "beak-of-midas-3",
          4.859828041835709,
        ],
        [
          "beak-of-midas-4",
          0.658019131276287,
        ],
        [
          "book-of-basan-1",
          3.7023486060966984,
        ],
        [
          "book-of-basan-2",
          0.5787397178695053,
        ],
        [
          "carved-rainstick-1",
          1.585588268135631,
        ],
        [
          "carved-rainstick-2",
          2.861986823984814,
        ],
        [
          "carved-rainstick-3",
          2.5765809357204006,
        ],
        [
          "carved-rainstick-4",
          0.007927941340678157,
        ],
        [
          "clarity-stone-1",
          3.8054118435255146,
        ],
        [
          "clarity-stone-2",
          0.47567648044068933,
        ],
        [
          "demeters-necklace-3",
          2.941266237391596,
        ],
        [
          "demeters-necklace-4",
          2.3625265195220906,
        ],
        [
          "dilithium-monocle-1",
          4.0987456731306064,
        ],
        [
          "dilithium-monocle-2",
          4.019466259723824,
        ],
        [
          "dilithium-monocle-3",
          0.8403617821118844,
        ],
        [
          "dilithium-stone-1",
          0.8958573714966316,
        ],
        [
          "dilithium-stone-2",
          0.9909926675847693,
        ],
        [
          "dilithium-stone-3",
          0.2299102988796665,
        ],
        [
          "gold-meteorite-2",
          13.953176759593555,
        ],
        [
          "gold-meteorite-3",
          0.6342353072542525,
        ],
        [
          "interstellar-compass-1",
          1.9582015111475044,
        ],
        [
          "interstellar-compass-2",
          2.8778427066661703,
        ],
        [
          "interstellar-compass-3",
          2.8382029999627796,
        ],
        [
          "interstellar-compass-4",
          0.03963970670339078,
        ],
        [
          "life-stone-1",
          1.4349573826627462,
        ],
        [
          "life-stone-2",
          0.7927941340678155,
        ],
        [
          "life-stone-3",
          0.562883835188149,
        ],
        [
          "light-of-eggendil-1",
          3.3931588938102504,
        ],
        [
          "light-of-eggendil-2",
          1.1812632597610453,
        ],
        [
          "lunar-stone-3",
          0.9830647262440912,
        ],
        [
          "lunar-stone-4",
          0.007927941340678157,
        ],
        [
          "lunar-totem-3",
          3.765772136822124,
        ],
        [
          "lunar-totem-4",
          0.5391000111661145,
        ],
        [
          "mercurys-lens-2",
          2.8699147653254924,
        ],
        [
          "mercurys-lens-3",
          3.7737000781628023,
        ],
        [
          "neodymium-medallion-2",
          1.878922097740723,
        ],
        [
          "neodymium-medallion-3",
          4.542710388208583,
        ],
        [
          "neodymium-medallion-4",
          1.6807235642237688,
        ],
        [
          "ornate-gusset-2",
          2.100904455279711,
        ],
        [
          "ornate-gusset-3",
          4.162169203856032,
        ],
        [
          "phoenix-feather-1",
          3.1632485949305837,
        ],
        [
          "phoenix-feather-2",
          3.8212677262068713,
        ],
        [
          "phoenix-feather-3",
          2.1246882793017456,
        ],
        [
          "prophecy-stone-1",
          4.304872147988238,
        ],
        [
          "prophecy-stone-2",
          0.3409014776491607,
        ],
        [
          "puzzle-cube-3",
          4.074961849108572,
        ],
        [
          "puzzle-cube-4",
          0.4915323631220456,
        ],
        [
          "quantum-metronome-1",
          5.081810399374698,
        ],
        [
          "quantum-metronome-2",
          14.896601779134253,
        ],
        [
          "quantum-metronome-3",
          4.146313321174675,
        ],
        [
          "quantum-stone-2",
          0.6025235418915398,
        ],
        [
          "quantum-stone-3",
          0.9354970782000223,
        ],
        [
          "shell-stone-3",
          1.0227044329474821,
        ],
        [
          "shell-stone-4",
          0.015855882681356313,
        ],
        [
          "ship-in-a-bottle-1",
          5.597126586518778,
        ],
        [
          "ship-in-a-bottle-2",
          2.647932407786504,
        ],
        [
          "ship-in-a-bottle-3",
          0.31711765362712624,
        ],
        [
          "solar-titanium-2",
          8.689023709383257,
        ],
        [
          "solar-titanium-3",
          0.19027059217627573,
        ],
        [
          "soul-stone-2",
          0.459820597759333,
        ],
        [
          "soul-stone-3",
          0.26955000558305725,
        ],
        [
          "tachyon-deflector-1",
          5.882532474783192,
        ],
        [
          "tachyon-deflector-2",
          1.1099117876949418,
        ],
        [
          "tachyon-stone-3",
          0.9117132541779879,
        ],
        [
          "tau-ceti-geode-2",
          8.4194737038002,
        ],
        [
          "terra-stone-1",
          1.1495514943983325,
        ],
        [
          "terra-stone-2",
          0.39639706703390776,
        ],
        [
          "terra-stone-3",
          0.9989206089254475,
        ],
        [
          "the-chalice-1",
          1.9502735698068263,
        ],
        [
          "the-chalice-2",
          2.758923586555998,
        ],
        [
          "the-chalice-3",
          3.987754494361112,
        ],
        [
          "the-chalice-4",
          0.015855882681356313,
        ],
        [
          "titanium-actuator-1",
          4.582350094911973,
        ],
        [
          "titanium-actuator-2",
          3.520005955261101,
        ],
        [
          "titanium-actuator-3",
          0.7531544273644247,
        ],
        [
          "tungsten-ankh-2",
          1.6965794469051252,
        ],
        [
          "tungsten-ankh-3",
          4.518926564186549,
        ],
        [
          "tungsten-ankh-4",
          0.3012617709457699,
        ],
        [
          "vial-martian-dust-2",
          1.6014441508169874,
        ],
        [
          "vial-martian-dust-3",
          3.7182044887780545,
        ],
        [
          "vial-martian-dust-4",
          0.08720735474745972,
        ],
      ],
      "target": "Reggference quantum metronome",
      "targetAfxId": 24,
    },
  ],
  "craftPrimal": [
    [
      "book-of-basan-2",
      62.63990294351737,
    ],
    [
      "book-of-basan-3",
      18.62501025041484,
    ],
    [
      "gold-meteorite-3",
      72.88039958902382,
    ],
    [
      "quantum-metronome-3",
      31.7679420878116,
    ],
    [
      "quantum-metronome-4",
      19.387661199632863,
    ],
    [
      "ship-in-a-bottle-2",
      25.180678629664943,
    ],
    [
      "ship-in-a-bottle-3",
      50.428007152578054,
    ],
    [
      "ship-in-a-bottle-4",
      16.839626366175615,
    ],
    [
      "solar-titanium-3",
      21.298482515700908,
    ],
    [
      "tachyon-deflector-2",
      39.98238506285733,
    ],
    [
      "tachyon-deflector-3",
      22.862735255303956,
    ],
    [
      "tachyon-deflector-4",
      4.56132325771985,
    ],
    [
      "tau-ceti-geode-3",
      37.63478906693838,
    ],
    [
      "the-chalice-4",
      21.920187842133817,
    ],
  ],
  "craftProbability": 0.03745098731689722,
  "dropProbability": 0,
  "expectedCrafts": 4.56132325771985,
  "expectedDrops": [],
  "finalYieldVector": [
    [
      "beak-of-midas-2",
      107.45067861892588,
    ],
    [
      "beak-of-midas-3",
      249.87769023742266,
    ],
    [
      "beak-of-midas-4",
      86.15484364347489,
    ],
    [
      "book-of-basan-1",
      465.40009317594445,
    ],
    [
      "book-of-basan-2",
      123.61019956063103,
    ],
    [
      "book-of-basan-3",
      15.054242481936388,
    ],
    [
      "demeters-necklace-3",
      139.20402195187927,
    ],
    [
      "demeters-necklace-4",
      195.5543128795442,
    ],
    [
      "gold-meteorite-2",
      801.684395479262,
    ],
    [
      "gold-meteorite-3",
      177.67921218504566,
    ],
    [
      "mercurys-lens-2",
      138.11225795847466,
    ],
    [
      "mercurys-lens-3",
      248.45849802810758,
    ],
    [
      "quantum-metronome-1",
      189.46686812299288,
    ],
    [
      "quantum-metronome-2",
      252.7370733898555,
    ],
    [
      "quantum-metronome-3",
      142.72100870888414,
    ],
    [
      "quantum-metronome-4",
      3.4750740556710955,
    ],
    [
      "ship-in-a-bottle-1",
      318.693123384321,
    ],
    [
      "ship-in-a-bottle-2",
      508.6361558692523,
    ],
    [
      "ship-in-a-bottle-3",
      151.64750924152932,
    ],
    [
      "ship-in-a-bottle-4",
      1.4056666647037803,
    ],
    [
      "solar-titanium-2",
      488.6293877094442,
    ],
    [
      "solar-titanium-3",
      129.9855389420333,
    ],
    [
      "tachyon-deflector-1",
      305.56646558849553,
    ],
    [
      "tachyon-deflector-2",
      188.64496749018224,
    ],
    [
      "tachyon-deflector-3",
      31.87314383733423,
    ],
    [
      "tau-ceti-geode-2",
      656.8397507256946,
    ],
    [
      "tau-ceti-geode-3",
      39.91585573159306,
    ],
    [
      "the-chalice-1",
      109.73300385199293,
    ],
    [
      "the-chalice-2",
      136.90970821403707,
    ],
    [
      "the-chalice-3",
      255.90424846344135,
    ],
    [
      "the-chalice-4",
      33.95484290911071,
    ],
    [
      "titanium-actuator-1",
      206.4951048160146,
    ],
  ],
  "fuelByEgg": [
    [
      50,
      2820000000000000,
    ],
    [
      53,
      2220000000000000,
    ],
    [
      54,
      4140000000000000,
    ],
  ],
  "fuelUsed": 9180000000000000,
  "perTarget": [
    {
      "bestProbability": 0.03745098731689722,
      "craftProbability": 0.03745098731689722,
      "dropProbability": 0,
      "expectedCrafts": 4.56132325771985,
      "nodeId": "tachyon-deflector-4",
    },
  ],
  "recipeDag": [
    {
      "children": [],
      "id": "beak-of-midas-1",
      "isLeaf": true,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [
        {
          "nodeId": "beak-of-midas-1",
          "quantity": 4,
        },
      ],
      "id": "beak-of-midas-2",
      "isLeaf": false,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [
        {
          "nodeId": "beak-of-midas-2",
          "quantity": 5,
        },
        {
          "nodeId": "tau-ceti-geode-2",
          "quantity": 1,
        },
      ],
      "id": "beak-of-midas-3",
      "isLeaf": false,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [
        {
          "nodeId": "beak-of-midas-3",
          "quantity": 6,
        },
        {
          "nodeId": "gold-meteorite-3",
          "quantity": 3,
        },
      ],
      "id": "beak-of-midas-4",
      "isLeaf": false,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [],
      "id": "book-of-basan-1",
      "isLeaf": true,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [
        {
          "nodeId": "book-of-basan-1",
          "quantity": 6,
        },
        {
          "nodeId": "gold-meteorite-3",
          "quantity": 4,
        },
      ],
      "id": "book-of-basan-2",
      "isLeaf": false,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [
        {
          "nodeId": "book-of-basan-2",
          "quantity": 10,
        },
        {
          "nodeId": "the-chalice-4",
          "quantity": 3,
        },
      ],
      "id": "book-of-basan-3",
      "isLeaf": false,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [],
      "id": "demeters-necklace-1",
      "isLeaf": true,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [
        {
          "nodeId": "demeters-necklace-1",
          "quantity": 3,
        },
      ],
      "id": "demeters-necklace-2",
      "isLeaf": false,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [
        {
          "nodeId": "demeters-necklace-2",
          "quantity": 5,
        },
        {
          "nodeId": "the-chalice-1",
          "quantity": 2,
        },
      ],
      "id": "demeters-necklace-3",
      "isLeaf": false,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [
        {
          "nodeId": "demeters-necklace-3",
          "quantity": 6,
        },
        {
          "nodeId": "gold-meteorite-3",
          "quantity": 1,
        },
      ],
      "id": "demeters-necklace-4",
      "isLeaf": false,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [],
      "id": "gold-meteorite-1",
      "isLeaf": true,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [
        {
          "nodeId": "gold-meteorite-1",
          "quantity": 9,
        },
      ],
      "id": "gold-meteorite-2",
      "isLeaf": false,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [
        {
          "nodeId": "gold-meteorite-2",
          "quantity": 11,
        },
      ],
      "id": "gold-meteorite-3",
      "isLeaf": false,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [],
      "id": "mercurys-lens-1",
      "isLeaf": true,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [
        {
          "nodeId": "mercurys-lens-1",
          "quantity": 6,
        },
      ],
      "id": "mercurys-lens-2",
      "isLeaf": false,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [
        {
          "nodeId": "mercurys-lens-2",
          "quantity": 8,
        },
        {
          "nodeId": "tau-ceti-geode-2",
          "quantity": 2,
        },
      ],
      "id": "mercurys-lens-3",
      "isLeaf": false,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [],
      "id": "quantum-metronome-1",
      "isLeaf": true,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [
        {
          "nodeId": "quantum-metronome-1",
          "quantity": 5,
        },
        {
          "nodeId": "titanium-actuator-1",
          "quantity": 2,
        },
      ],
      "id": "quantum-metronome-2",
      "isLeaf": false,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [
        {
          "nodeId": "quantum-metronome-2",
          "quantity": 7,
        },
        {
          "nodeId": "mercurys-lens-3",
          "quantity": 4,
        },
      ],
      "id": "quantum-metronome-3",
      "isLeaf": false,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [
        {
          "nodeId": "quantum-metronome-3",
          "quantity": 9,
        },
        {
          "nodeId": "tau-ceti-geode-3",
          "quantity": 4,
        },
      ],
      "id": "quantum-metronome-4",
      "isLeaf": false,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [],
      "id": "ship-in-a-bottle-1",
      "isLeaf": true,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [
        {
          "nodeId": "ship-in-a-bottle-1",
          "quantity": 6,
        },
        {
          "nodeId": "demeters-necklace-4",
          "quantity": 2,
        },
      ],
      "id": "ship-in-a-bottle-2",
      "isLeaf": false,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [
        {
          "nodeId": "ship-in-a-bottle-2",
          "quantity": 9,
        },
        {
          "nodeId": "solar-titanium-3",
          "quantity": 3,
        },
      ],
      "id": "ship-in-a-bottle-3",
      "isLeaf": false,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [
        {
          "nodeId": "ship-in-a-bottle-3",
          "quantity": 12,
        },
        {
          "nodeId": "book-of-basan-3",
          "quantity": 2,
        },
      ],
      "id": "ship-in-a-bottle-4",
      "isLeaf": false,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [],
      "id": "solar-titanium-1",
      "isLeaf": true,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [
        {
          "nodeId": "solar-titanium-1",
          "quantity": 10,
        },
      ],
      "id": "solar-titanium-2",
      "isLeaf": false,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [
        {
          "nodeId": "solar-titanium-2",
          "quantity": 12,
        },
      ],
      "id": "solar-titanium-3",
      "isLeaf": false,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [],
      "id": "tachyon-deflector-1",
      "isLeaf": true,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [
        {
          "nodeId": "tachyon-deflector-1",
          "quantity": 6,
        },
        {
          "nodeId": "ship-in-a-bottle-2",
          "quantity": 2,
        },
      ],
      "id": "tachyon-deflector-2",
      "isLeaf": false,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [
        {
          "nodeId": "tachyon-deflector-2",
          "quantity": 10,
        },
        {
          "nodeId": "quantum-metronome-4",
          "quantity": 1,
        },
      ],
      "id": "tachyon-deflector-3",
      "isLeaf": false,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [
        {
          "nodeId": "tachyon-deflector-3",
          "quantity": 12,
        },
        {
          "nodeId": "ship-in-a-bottle-4",
          "quantity": 4,
        },
      ],
      "id": "tachyon-deflector-4",
      "isLeaf": false,
      "legendaryCraftProbability": 0.008333333333333333,
    },
    {
      "children": [],
      "id": "tau-ceti-geode-1",
      "isLeaf": true,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [
        {
          "nodeId": "tau-ceti-geode-1",
          "quantity": 12,
        },
      ],
      "id": "tau-ceti-geode-2",
      "isLeaf": false,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [
        {
          "nodeId": "tau-ceti-geode-2",
          "quantity": 14,
        },
      ],
      "id": "tau-ceti-geode-3",
      "isLeaf": false,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [],
      "id": "the-chalice-1",
      "isLeaf": true,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [
        {
          "nodeId": "the-chalice-1",
          "quantity": 4,
        },
        {
          "nodeId": "gold-meteorite-2",
          "quantity": 1,
        },
      ],
      "id": "the-chalice-2",
      "isLeaf": false,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [
        {
          "nodeId": "the-chalice-2",
          "quantity": 6,
        },
        {
          "nodeId": "tau-ceti-geode-2",
          "quantity": 4,
        },
      ],
      "id": "the-chalice-3",
      "isLeaf": false,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [
        {
          "nodeId": "the-chalice-3",
          "quantity": 8,
        },
        {
          "nodeId": "beak-of-midas-4",
          "quantity": 2,
        },
      ],
      "id": "the-chalice-4",
      "isLeaf": false,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [],
      "id": "titanium-actuator-1",
      "isLeaf": true,
      "legendaryCraftProbability": 0,
    },
  ],
  "runningTimeSeconds": 2592000,
  "slots": [
    {
      "loadSeconds": 2592000,
      "missionCount": 19,
      "rawLoadSeconds": 2592000,
    },
    {
      "loadSeconds": 2592000,
      "missionCount": 19,
      "rawLoadSeconds": 2592000,
    },
    {
      "loadSeconds": 2592000,
      "missionCount": 19,
      "rawLoadSeconds": 2592000,
    },
  ],
  "timeUnitsUsed": 2592000,
}
`;

exports[`optimizeFull regression snapshot (n=1, must match pristine main byte-for-byte) > never exceeds either budget 1`] = `
{
  "baseYield": [],
  "bestProbability": 0.9936373145588641,
  "choiceHistory": [
    {
      "actualFuel": 0,
      "actualFuelByEgg": [],
      "actualTime": 3,
      "legendarySupplyVector": [],
      "numShipsLaunched": 48,
      "ship": "chicken-one-short",
      "supplyVector": [
        [
          "B",
          1,
        ],
      ],
      "target": "",
      "targetAfxId": 10000,
    },
  ],
  "craftPrimal": [
    [
      "A",
      48,
    ],
  ],
  "craftProbability": 0.9936373145588641,
  "dropProbability": 0,
  "expectedCrafts": 48,
  "expectedDrops": [],
  "finalYieldVector": [
    [
      "B",
      48,
    ],
  ],
  "fuelByEgg": [],
  "fuelUsed": 0,
  "perTarget": [
    {
      "bestProbability": 0.9936373145588641,
      "craftProbability": 0.9936373145588641,
      "dropProbability": 0,
      "expectedCrafts": 48,
      "nodeId": "A",
    },
  ],
  "recipeDag": [
    {
      "children": [
        {
          "nodeId": "B",
          "quantity": 1,
        },
      ],
      "id": "A",
      "isLeaf": false,
      "legendaryCraftProbability": 0.1,
    },
    {
      "children": [],
      "id": "B",
      "isLeaf": true,
      "legendaryCraftProbability": 0,
    },
  ],
  "runningTimeSeconds": 48,
  "slots": [
    {
      "loadSeconds": 48,
      "missionCount": 16,
      "rawLoadSeconds": 48,
    },
    {
      "loadSeconds": 48,
      "missionCount": 16,
      "rawLoadSeconds": 48,
    },
    {
      "loadSeconds": 48,
      "missionCount": 16,
      "rawLoadSeconds": 48,
    },
  ],
  "timeUnitsUsed": 48,
}
`;

exports[`optimizeFull regression snapshot (n=1, must match pristine main byte-for-byte) > pairs a zero-fuel option with a fueled one 1`] = `
{
  "baseYield": [],
  "bestProbability": 0.6513215599,
  "choiceHistory": [
    {
      "actualFuel": 0,
      "actualFuelByEgg": [],
      "actualTime": 10,
      "legendarySupplyVector": [],
      "numShipsLaunched": 50,
      "ship": "chicken-one-short",
      "supplyVector": [
        [
          "B",
          1,
        ],
      ],
      "target": "",
      "targetAfxId": 0,
    },
    {
      "actualFuel": 10,
      "actualFuelByEgg": [],
      "actualTime": 10,
      "legendarySupplyVector": [],
      "numShipsLaunched": 10,
      "ship": "chicken-one-short",
      "supplyVector": [
        [
          "C",
          1,
        ],
      ],
      "target": "",
      "targetAfxId": 12,
    },
  ],
  "craftPrimal": [
    [
      "A",
      10,
    ],
  ],
  "craftProbability": 0.6513215599,
  "dropProbability": 0,
  "expectedCrafts": 10,
  "expectedDrops": [],
  "finalYieldVector": [
    [
      "B",
      50,
    ],
    [
      "C",
      10,
    ],
  ],
  "fuelByEgg": [],
  "fuelUsed": 100,
  "perTarget": [
    {
      "bestProbability": 0.6513215599,
      "craftProbability": 0.6513215599,
      "dropProbability": 0,
      "expectedCrafts": 10,
      "nodeId": "A",
    },
  ],
  "recipeDag": [
    {
      "children": [
        {
          "nodeId": "B",
          "quantity": 1,
        },
        {
          "nodeId": "C",
          "quantity": 1,
        },
      ],
      "id": "A",
      "isLeaf": false,
      "legendaryCraftProbability": 0.1,
    },
    {
      "children": [],
      "id": "B",
      "isLeaf": true,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [],
      "id": "C",
      "isLeaf": true,
      "legendaryCraftProbability": 0,
    },
  ],
  "runningTimeSeconds": 200,
  "slots": [
    {
      "loadSeconds": 200,
      "missionCount": 20,
      "rawLoadSeconds": 200,
    },
    {
      "loadSeconds": 200,
      "missionCount": 20,
      "rawLoadSeconds": 200,
    },
    {
      "loadSeconds": 200,
      "missionCount": 20,
      "rawLoadSeconds": 200,
    },
  ],
  "timeUnitsUsed": 200,
}
`;

exports[`optimizeFull regression snapshot (n=1, must match pristine main byte-for-byte) > prunes an option dominated on cost alone 1`] = `
{
  "baseYield": [],
  "bestProbability": 0.6513215599,
  "choiceHistory": [
    {
      "actualFuel": 10,
      "actualFuelByEgg": [],
      "actualTime": 10,
      "legendarySupplyVector": [],
      "numShipsLaunched": 10,
      "ship": "chicken-one-short",
      "supplyVector": [
        [
          "B",
          1,
        ],
      ],
      "target": "",
      "targetAfxId": 12,
    },
  ],
  "craftPrimal": [
    [
      "A",
      10,
    ],
  ],
  "craftProbability": 0.6513215599,
  "dropProbability": 0,
  "expectedCrafts": 10,
  "expectedDrops": [],
  "finalYieldVector": [
    [
      "B",
      10,
    ],
  ],
  "fuelByEgg": [],
  "fuelUsed": 100,
  "perTarget": [
    {
      "bestProbability": 0.6513215599,
      "craftProbability": 0.6513215599,
      "dropProbability": 0,
      "expectedCrafts": 10,
      "nodeId": "A",
    },
  ],
  "recipeDag": [
    {
      "children": [
        {
          "nodeId": "B",
          "quantity": 1,
        },
      ],
      "id": "A",
      "isLeaf": false,
      "legendaryCraftProbability": 0.1,
    },
    {
      "children": [],
      "id": "B",
      "isLeaf": true,
      "legendaryCraftProbability": 0,
    },
  ],
  "runningTimeSeconds": 100,
  "slots": [
    {
      "loadSeconds": 100,
      "missionCount": 10,
      "rawLoadSeconds": 100,
    },
    {
      "loadSeconds": 0,
      "missionCount": 0,
      "rawLoadSeconds": 0,
    },
    {
      "loadSeconds": 0,
      "missionCount": 0,
      "rawLoadSeconds": 0,
    },
  ],
  "timeUnitsUsed": 100,
}
`;

exports[`optimizeFull regression snapshot (n=1, must match pristine main byte-for-byte) > prunes an option dominated on yield 1`] = `
{
  "baseYield": [],
  "bestProbability": 0.8784233454094307,
  "choiceHistory": [
    {
      "actualFuel": 10,
      "actualFuelByEgg": [],
      "actualTime": 10,
      "legendarySupplyVector": [],
      "numShipsLaunched": 10,
      "ship": "chicken-one-short",
      "supplyVector": [
        [
          "B",
          2,
        ],
      ],
      "target": "",
      "targetAfxId": 12,
    },
  ],
  "craftPrimal": [
    [
      "A",
      20,
    ],
  ],
  "craftProbability": 0.8784233454094307,
  "dropProbability": 0,
  "expectedCrafts": 20,
  "expectedDrops": [],
  "finalYieldVector": [
    [
      "B",
      20,
    ],
  ],
  "fuelByEgg": [],
  "fuelUsed": 100,
  "perTarget": [
    {
      "bestProbability": 0.8784233454094307,
      "craftProbability": 0.8784233454094307,
      "dropProbability": 0,
      "expectedCrafts": 20,
      "nodeId": "A",
    },
  ],
  "recipeDag": [
    {
      "children": [
        {
          "nodeId": "B",
          "quantity": 1,
        },
      ],
      "id": "A",
      "isLeaf": false,
      "legendaryCraftProbability": 0.1,
    },
    {
      "children": [],
      "id": "B",
      "isLeaf": true,
      "legendaryCraftProbability": 0,
    },
  ],
  "runningTimeSeconds": 100,
  "slots": [
    {
      "loadSeconds": 100,
      "missionCount": 10,
      "rawLoadSeconds": 100,
    },
    {
      "loadSeconds": 0,
      "missionCount": 0,
      "rawLoadSeconds": 0,
    },
    {
      "loadSeconds": 0,
      "missionCount": 0,
      "rawLoadSeconds": 0,
    },
  ],
  "timeUnitsUsed": 100,
}
`;

exports[`optimizeFull regression snapshot (n=1, must match pristine main byte-for-byte) > reaches the brute-force optimum on a tight-fuel mix 1`] = `
{
  "baseYield": [],
  "bestProbability": 0.7228762386536056,
  "choiceHistory": [
    {
      "actualFuel": 1,
      "actualFuelByEgg": [],
      "actualTime": 3,
      "legendarySupplyVector": [],
      "numShipsLaunched": 6,
      "ship": "chicken-one-short",
      "supplyVector": [
        [
          "B",
          2.43,
        ],
        [
          "C",
          2.03,
        ],
      ],
      "target": "",
      "targetAfxId": 12,
    },
  ],
  "craftPrimal": [
    [
      "A",
      12.18,
    ],
  ],
  "craftProbability": 0.7228762386536056,
  "dropProbability": 0,
  "expectedCrafts": 12.18,
  "expectedDrops": [],
  "finalYieldVector": [
    [
      "B",
      14.580000000000002,
    ],
    [
      "C",
      12.18,
    ],
  ],
  "fuelByEgg": [],
  "fuelUsed": 6,
  "perTarget": [
    {
      "bestProbability": 0.7228762386536056,
      "craftProbability": 0.7228762386536056,
      "dropProbability": 0,
      "expectedCrafts": 12.18,
      "nodeId": "A",
    },
  ],
  "recipeDag": [
    {
      "children": [
        {
          "nodeId": "B",
          "quantity": 1,
        },
        {
          "nodeId": "C",
          "quantity": 1,
        },
      ],
      "id": "A",
      "isLeaf": false,
      "legendaryCraftProbability": 0.1,
    },
    {
      "children": [],
      "id": "B",
      "isLeaf": true,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [],
      "id": "C",
      "isLeaf": true,
      "legendaryCraftProbability": 0,
    },
  ],
  "runningTimeSeconds": 6,
  "slots": [
    {
      "loadSeconds": 6,
      "missionCount": 2,
      "rawLoadSeconds": 6,
    },
    {
      "loadSeconds": 6,
      "missionCount": 2,
      "rawLoadSeconds": 6,
    },
    {
      "loadSeconds": 6,
      "missionCount": 2,
      "rawLoadSeconds": 6,
    },
  ],
  "timeUnitsUsed": 6,
}
`;

exports[`optimizeFull regression snapshot (n=1, must match pristine main byte-for-byte) > respects a tighter time budget exactly 1`] = `
{
  "baseYield": [],
  "bestProbability": 0.794108867905351,
  "choiceHistory": [
    {
      "actualFuel": 0,
      "actualFuelByEgg": [],
      "actualTime": 10,
      "legendarySupplyVector": [],
      "numShipsLaunched": 15,
      "ship": "chicken-one-short",
      "supplyVector": [
        [
          "B",
          1,
        ],
      ],
      "target": "",
      "targetAfxId": 10000,
    },
  ],
  "craftPrimal": [
    [
      "A",
      15,
    ],
  ],
  "craftProbability": 0.794108867905351,
  "dropProbability": 0,
  "expectedCrafts": 15,
  "expectedDrops": [],
  "finalYieldVector": [
    [
      "B",
      15,
    ],
  ],
  "fuelByEgg": [],
  "fuelUsed": 0,
  "perTarget": [
    {
      "bestProbability": 0.794108867905351,
      "craftProbability": 0.794108867905351,
      "dropProbability": 0,
      "expectedCrafts": 15,
      "nodeId": "A",
    },
  ],
  "recipeDag": [
    {
      "children": [
        {
          "nodeId": "B",
          "quantity": 1,
        },
      ],
      "id": "A",
      "isLeaf": false,
      "legendaryCraftProbability": 0.1,
    },
    {
      "children": [],
      "id": "B",
      "isLeaf": true,
      "legendaryCraftProbability": 0,
    },
  ],
  "runningTimeSeconds": 50,
  "slots": [
    {
      "loadSeconds": 50,
      "missionCount": 5,
      "rawLoadSeconds": 50,
    },
    {
      "loadSeconds": 50,
      "missionCount": 5,
      "rawLoadSeconds": 50,
    },
    {
      "loadSeconds": 50,
      "missionCount": 5,
      "rawLoadSeconds": 50,
    },
  ],
  "timeUnitsUsed": 50,
}
`;

exports[`optimizeFull regression snapshot (n=1, must match pristine main byte-for-byte) > respects the fuel budget 1`] = `
{
  "baseYield": [],
  "bestProbability": 0.2709999999999999,
  "choiceHistory": [
    {
      "actualFuel": 100,
      "actualFuelByEgg": [],
      "actualTime": 1,
      "legendarySupplyVector": [],
      "numShipsLaunched": 3,
      "ship": "chicken-one-short",
      "supplyVector": [
        [
          "B",
          1,
        ],
      ],
      "target": "",
      "targetAfxId": 10000,
    },
  ],
  "craftPrimal": [
    [
      "A",
      3,
    ],
  ],
  "craftProbability": 0.2709999999999999,
  "dropProbability": 0,
  "expectedCrafts": 3,
  "expectedDrops": [],
  "finalYieldVector": [
    [
      "B",
      3,
    ],
  ],
  "fuelByEgg": [],
  "fuelUsed": 300,
  "perTarget": [
    {
      "bestProbability": 0.2709999999999999,
      "craftProbability": 0.2709999999999999,
      "dropProbability": 0,
      "expectedCrafts": 3,
      "nodeId": "A",
    },
  ],
  "recipeDag": [
    {
      "children": [
        {
          "nodeId": "B",
          "quantity": 1,
        },
      ],
      "id": "A",
      "isLeaf": false,
      "legendaryCraftProbability": 0.1,
    },
    {
      "children": [],
      "id": "B",
      "isLeaf": true,
      "legendaryCraftProbability": 0,
    },
  ],
  "runningTimeSeconds": 3,
  "slots": [
    {
      "loadSeconds": 3,
      "missionCount": 3,
      "rawLoadSeconds": 3,
    },
    {
      "loadSeconds": 0,
      "missionCount": 0,
      "rawLoadSeconds": 0,
    },
    {
      "loadSeconds": 0,
      "missionCount": 0,
      "rawLoadSeconds": 0,
    },
  ],
  "timeUnitsUsed": 3,
}
`;

exports[`optimizeFull regression snapshot (n=1, must match pristine main byte-for-byte) > snapshots base_yield and keeps it out of the dropped column 1`] = `
{
  "baseYield": [
    [
      "puzzle-cube-1",
      5,
    ],
  ],
  "bestProbability": 0.8784233454094307,
  "choiceHistory": [
    {
      "actualFuel": 0,
      "actualFuelByEgg": [],
      "actualTime": 10,
      "legendarySupplyVector": [],
      "numShipsLaunched": 15,
      "ship": "chicken-one-short",
      "supplyVector": [
        [
          "puzzle-cube-1",
          1,
        ],
      ],
      "target": "",
      "targetAfxId": 10000,
    },
  ],
  "craftPrimal": [
    [
      "puzzle-cube-2",
      20,
    ],
  ],
  "craftProbability": 0.8784233454094307,
  "dropProbability": 0,
  "expectedCrafts": 20,
  "expectedDrops": [],
  "finalYieldVector": [
    [
      "puzzle-cube-1",
      20,
    ],
  ],
  "fuelByEgg": [],
  "fuelUsed": 0,
  "perTarget": [
    {
      "bestProbability": 0.8784233454094307,
      "craftProbability": 0.8784233454094307,
      "dropProbability": 0,
      "expectedCrafts": 20,
      "nodeId": "puzzle-cube-2",
    },
  ],
  "recipeDag": [
    {
      "children": [],
      "id": "puzzle-cube-1",
      "isLeaf": true,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [
        {
          "nodeId": "puzzle-cube-1",
          "quantity": 1,
        },
      ],
      "id": "puzzle-cube-2",
      "isLeaf": false,
      "legendaryCraftProbability": 0.1,
    },
  ],
  "runningTimeSeconds": 50,
  "slots": [
    {
      "loadSeconds": 50,
      "missionCount": 5,
      "rawLoadSeconds": 50,
    },
    {
      "loadSeconds": 50,
      "missionCount": 5,
      "rawLoadSeconds": 50,
    },
    {
      "loadSeconds": 50,
      "missionCount": 5,
      "rawLoadSeconds": 50,
    },
  ],
  "timeUnitsUsed": 50,
}
`;

exports[`optimizeFull regression snapshot (n=1, must match pristine main byte-for-byte) > treats a NaN fuel budget as zero 1`] = `
{
  "baseYield": [],
  "bestProbability": 0.9999704873345694,
  "choiceHistory": [
    {
      "actualFuel": 0,
      "actualFuelByEgg": [],
      "actualTime": 3,
      "legendarySupplyVector": [],
      "numShipsLaunched": 99,
      "ship": "chicken-one-short",
      "supplyVector": [
        [
          "B",
          1,
        ],
      ],
      "target": "",
      "targetAfxId": 10000,
    },
  ],
  "craftPrimal": [
    [
      "A",
      99,
    ],
  ],
  "craftProbability": 0.9999704873345694,
  "dropProbability": 0,
  "expectedCrafts": 99,
  "expectedDrops": [],
  "finalYieldVector": [
    [
      "B",
      99,
    ],
  ],
  "fuelByEgg": [],
  "fuelUsed": 0,
  "perTarget": [
    {
      "bestProbability": 0.9999704873345694,
      "craftProbability": 0.9999704873345694,
      "dropProbability": 0,
      "expectedCrafts": 99,
      "nodeId": "A",
    },
  ],
  "recipeDag": [
    {
      "children": [
        {
          "nodeId": "B",
          "quantity": 1,
        },
      ],
      "id": "A",
      "isLeaf": false,
      "legendaryCraftProbability": 0.1,
    },
    {
      "children": [],
      "id": "B",
      "isLeaf": true,
      "legendaryCraftProbability": 0,
    },
  ],
  "runningTimeSeconds": 99,
  "slots": [
    {
      "loadSeconds": 99,
      "missionCount": 33,
      "rawLoadSeconds": 99,
    },
    {
      "loadSeconds": 99,
      "missionCount": 33,
      "rawLoadSeconds": 99,
    },
    {
      "loadSeconds": 99,
      "missionCount": 33,
      "rawLoadSeconds": 99,
    },
  ],
  "timeUnitsUsed": 99,
}
`;

exports[`optimizeFull regression snapshot (n=1, must match pristine main byte-for-byte) > treats a NaN or negative time budget as zero (-5) 1`] = `
{
  "baseYield": [],
  "bestProbability": 0,
  "choiceHistory": [],
  "craftPrimal": [],
  "craftProbability": 0,
  "dropProbability": 0,
  "expectedCrafts": 0,
  "expectedDrops": [],
  "finalYieldVector": [],
  "fuelByEgg": [],
  "fuelUsed": 0,
  "perTarget": [
    {
      "bestProbability": 0,
      "craftProbability": 0,
      "dropProbability": 0,
      "expectedCrafts": 0,
      "nodeId": "A",
    },
  ],
  "recipeDag": [
    {
      "children": [
        {
          "nodeId": "B",
          "quantity": 1,
        },
      ],
      "id": "A",
      "isLeaf": false,
      "legendaryCraftProbability": 0.1,
    },
    {
      "children": [],
      "id": "B",
      "isLeaf": true,
      "legendaryCraftProbability": 0,
    },
  ],
  "runningTimeSeconds": 0,
  "slots": undefined,
  "timeUnitsUsed": 0,
}
`;

exports[`optimizeFull regression snapshot (n=1, must match pristine main byte-for-byte) > treats a NaN or negative time budget as zero (Infinity) 1`] = `
{
  "baseYield": [],
  "bestProbability": 0,
  "choiceHistory": [],
  "craftPrimal": [],
  "craftProbability": 0,
  "dropProbability": 0,
  "expectedCrafts": 0,
  "expectedDrops": [],
  "finalYieldVector": [],
  "fuelByEgg": [],
  "fuelUsed": 0,
  "perTarget": [
    {
      "bestProbability": 0,
      "craftProbability": 0,
      "dropProbability": 0,
      "expectedCrafts": 0,
      "nodeId": "A",
    },
  ],
  "recipeDag": [
    {
      "children": [
        {
          "nodeId": "B",
          "quantity": 1,
        },
      ],
      "id": "A",
      "isLeaf": false,
      "legendaryCraftProbability": 0.1,
    },
    {
      "children": [],
      "id": "B",
      "isLeaf": true,
      "legendaryCraftProbability": 0,
    },
  ],
  "runningTimeSeconds": 0,
  "slots": undefined,
  "timeUnitsUsed": 0,
}
`;

exports[`optimizeFull regression snapshot (n=1, must match pristine main byte-for-byte) > treats a NaN or negative time budget as zero (NaN) 1`] = `
{
  "baseYield": [],
  "bestProbability": 0,
  "choiceHistory": [],
  "craftPrimal": [],
  "craftProbability": 0,
  "dropProbability": 0,
  "expectedCrafts": 0,
  "expectedDrops": [],
  "finalYieldVector": [],
  "fuelByEgg": [],
  "fuelUsed": 0,
  "perTarget": [
    {
      "bestProbability": 0,
      "craftProbability": 0,
      "dropProbability": 0,
      "expectedCrafts": 0,
      "nodeId": "A",
    },
  ],
  "recipeDag": [
    {
      "children": [
        {
          "nodeId": "B",
          "quantity": 1,
        },
      ],
      "id": "A",
      "isLeaf": false,
      "legendaryCraftProbability": 0.1,
    },
    {
      "children": [],
      "id": "B",
      "isLeaf": true,
      "legendaryCraftProbability": 0,
    },
  ],
  "runningTimeSeconds": 0,
  "slots": undefined,
  "timeUnitsUsed": 0,
}
`;

exports[`optimizeFull regression snapshot (n=1, must match pristine main byte-for-byte) > uses the full time budget for a zero-fuel option 1`] = `
{
  "baseYield": [],
  "bestProbability": 0.9576088417247838,
  "choiceHistory": [
    {
      "actualFuel": 0,
      "actualFuelByEgg": [],
      "actualTime": 10,
      "legendarySupplyVector": [],
      "numShipsLaunched": 30,
      "ship": "chicken-one-short",
      "supplyVector": [
        [
          "B",
          1,
        ],
      ],
      "target": "",
      "targetAfxId": 10000,
    },
  ],
  "craftPrimal": [
    [
      "A",
      30,
    ],
  ],
  "craftProbability": 0.9576088417247838,
  "dropProbability": 0,
  "expectedCrafts": 30,
  "expectedDrops": [],
  "finalYieldVector": [
    [
      "B",
      30,
    ],
  ],
  "fuelByEgg": [],
  "fuelUsed": 0,
  "perTarget": [
    {
      "bestProbability": 0.9576088417247838,
      "craftProbability": 0.9576088417247838,
      "dropProbability": 0,
      "expectedCrafts": 30,
      "nodeId": "A",
    },
  ],
  "recipeDag": [
    {
      "children": [
        {
          "nodeId": "B",
          "quantity": 1,
        },
      ],
      "id": "A",
      "isLeaf": false,
      "legendaryCraftProbability": 0.1,
    },
    {
      "children": [],
      "id": "B",
      "isLeaf": true,
      "legendaryCraftProbability": 0,
    },
  ],
  "runningTimeSeconds": 100,
  "slots": [
    {
      "loadSeconds": 100,
      "missionCount": 10,
      "rawLoadSeconds": 100,
    },
    {
      "loadSeconds": 100,
      "missionCount": 10,
      "rawLoadSeconds": 100,
    },
    {
      "loadSeconds": 100,
      "missionCount": 10,
      "rawLoadSeconds": 100,
    },
  ],
  "timeUnitsUsed": 100,
}
`;

exports[`optimizeFull regression snapshot (n=1, must match pristine main byte-for-byte) > values direct legendary drops when crafting is impossible 1`] = `
{
  "baseYield": [],
  "bestProbability": 0.6321205588285577,
  "choiceHistory": [
    {
      "actualFuel": 10,
      "actualFuelByEgg": [],
      "actualTime": 10,
      "legendarySupplyVector": [
        [
          "A",
          0.1,
        ],
      ],
      "numShipsLaunched": 10,
      "ship": "chicken-one-short",
      "supplyVector": [
        [
          "B",
          1,
        ],
      ],
      "target": "",
      "targetAfxId": 10000,
    },
  ],
  "craftPrimal": [],
  "craftProbability": 0,
  "dropProbability": 0.6321205588285577,
  "expectedCrafts": 0,
  "expectedDrops": [],
  "finalYieldVector": [
    [
      "B",
      10,
    ],
  ],
  "fuelByEgg": [],
  "fuelUsed": 100,
  "perTarget": [
    {
      "bestProbability": 0.6321205588285577,
      "craftProbability": 0,
      "dropProbability": 0.6321205588285577,
      "expectedCrafts": 0,
      "nodeId": "A",
    },
  ],
  "recipeDag": [
    {
      "children": [
        {
          "nodeId": "B",
          "quantity": 1,
        },
      ],
      "id": "A",
      "isLeaf": false,
      "legendaryCraftProbability": 0,
    },
    {
      "children": [],
      "id": "B",
      "isLeaf": true,
      "legendaryCraftProbability": 0,
    },
  ],
  "runningTimeSeconds": 100,
  "slots": [
    {
      "loadSeconds": 100,
      "missionCount": 10,
      "rawLoadSeconds": 100,
    },
    {
      "loadSeconds": 0,
      "missionCount": 0,
      "rawLoadSeconds": 0,
    },
    {
      "loadSeconds": 0,
      "missionCount": 0,
      "rawLoadSeconds": 0,
    },
  ],
  "timeUnitsUsed": 100,
}
`;
